--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" />
     <title>モグラ叩きゲーム</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>  
     <h1>得点　<span id="count">0</span>点</h1>
     <div align="center">
 
-      <img id="three" src="images/tori_no3.png">
-      <img id="two" src="images/tori_no2.png">
-      <img id="one" src="images/tori_no1.png">
+      <img id="three" src="tori_no3.png">
+      <img id="two" src="tori_no2.png">
+      <img id="one" src="tori_no1.png">
       
-      <img id="mogura1" class="mogura" src="images/mogura1.png">
-      <img id="mogura2" class="mogura" src="images/mogura1.png">
-      <img id="mogura3" class="mogura" src="images/mogura1.png">
-      <img id="mogura4" class="mogura" src="images/mogura1.png">
-      <img id="mogura5" class="mogura" src="images/mogura1.png">
-      <img id="back" src="images/back.png">
-      <img id="piko" src="images/piko.png" style="position:absolute;">
+      <img id="mogura1" class="mogura" src="mogura1.png">
+      <img id="mogura2" class="mogura" src="mogura1.png">
+      <img id="mogura3" class="mogura" src="mogura1.png">
+      <img id="mogura4" class="mogura" src="mogura1.png">
+      <img id="mogura5" class="mogura" src="mogura1.png">
+      <img id="back" src="back.png">
+      <img id="piko" src="piko.png" style="position:absolute;">
 
-      <img id="oshimai" src="images/gekijou_end_oshimai.png">
-      <img id="shimaenaga" src="images/kubikashige-shimaenaga-768x768.png"
+      <img id="oshimai" src="gekijou_end_oshimai.png">
+      <img id="shimaenaga" src="kubikashige-shimaenaga-768x768.png"
 
     </div>
     <div id="layer">
@@ -35,7 +35,7 @@
       <a id="retry">RETRY?</a>
       <a id="back_to_title">Back to title >></a>
     </div>
-    <script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 
 </html>
