--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>モグラ叩き</h1>
     
     <div align="center">    
-      <img id="title" src="title.png">
+      <img id="title" src="imag/title.png">
     </div>
     <a id="start">START!</a>
     <script type="text/javascript" src="script_start.js"></script>
