--- a/index_main.html
+++ b/index_main.html
@@ -12,20 +12,20 @@
     <h1>得点　<span id="count">0</span>点</h1>
     <div align="center">
 
-      <img id="three" src="tori_no3.png">
-      <img id="two" src="tori_no2.png">
-      <img id="one" src="tori_no1.png">
+      <img id="three" src="imag/tori_no3.png">
+      <img id="two" src="imag/tori_no2.png">
+      <img id="one" src="imag/tori_no1.png">
       
-      <img id="mogura1" class="mogura" src="mogura1.png">
-      <img id="mogura2" class="mogura" src="mogura1.png">
-      <img id="mogura3" class="mogura" src="mogura1.png">
-      <img id="mogura4" class="mogura" src="mogura1.png">
-      <img id="mogura5" class="mogura" src="mogura1.png">
-      <img id="back" src="back.png">
-      <img id="piko" src="piko.png" style="position:absolute;">
+      <img id="mogura1" class="mogura" src="imag/mogura1.png">
+      <img id="mogura2" class="mogura" src="imag/mogura1.png">
+      <img id="mogura3" class="mogura" src="imag/mogura1.png">
+      <img id="mogura4" class="mogura" src="imag/mogura1.png">
+      <img id="mogura5" class="mogura" src="imag/mogura1.png">
+      <img id="back" src="imag/back.png">
+      <img id="piko" src="imag/piko.png" style="position:absolute;">
 
-      <img id="oshimai" src="gekijou_end_oshimai.png">
-      <img id="shimaenaga" src="kubikashige-shimaenaga-768x768.png"
+      <img id="oshimai" src="imag/gekijou_end_oshimai.png">
+      <img id="shimaenaga" src="imag/kubikashige-shimaenaga-768x768.png"
 
     </div>
     <div id="layer">
