--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" />
     <title>モグラ叩きスタート</title>
-    <link rel="stylesheet" type="text/css" href="style_start.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>  
