--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img id="title" src="imag/title.png">
     </div>
     <a id="start">START!</a>
-    <script type="text/javascript" src="script_start.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 
 </html>
