--- a/index_main.html
+++ b/index_main.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" />
     <title>モグラ叩きゲーム</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style_main.css" />
   </head>
 
   <body>  
@@ -35,7 +35,7 @@
       <a id="retry">RETRY?</a>
       <a id="back_to_title">Back to title >></a>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script_main.js"></script>
   </body>
 
 </html>
