--- a/index_main.html
+++ b/index_main.html
@@ -10,6 +10,7 @@
 
   <body>  
     <h1>得点　<span id="count">0</span> 点</h1>
+    <p id = "countdown"></p>
     <div align="center">
 
       <img id="three" src="imag/tori_no3.png">
